--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,6 @@
     <string name="text1">Угадай число заданое системой в диапазоне от 0 до 9. Для этого у тебя есть три попытки.</string>
     <string name="text2">Для начала игры Start</string>
 
-
     <!-- Context menu-->
     <string name="contextMenuAnswer">Ответ</string>
     <string name="contextMenuStatistic">Обнулить статистику</string>
@@ -20,7 +19,7 @@
     <string name="menuHelp_nh">Нечетное число</string>
 
     <string name="menuStatisticAll">Вся статистика</string>
-    <string name="allStatisticAll">"Всего сыграно:    "</string>
+    <string name="allStatisticAll">"Всего сыграно игр: "</string>
     <string name="allStatisticPoz">"Из них выиграно:  "</string>
     <string name="allStatisticNeg">"Из них проиграно: "</string>
 
@@ -28,6 +27,8 @@
     <string name="currentStatisticAll">"Сыграно:   "</string>
     <string name="currentStatisticPoz">"Выиграно:  "</string>
     <string name="currentStatisticNeg">"Проиграно: "</string>
+
+    <string name="menuSettings">Настройки</string>
 
     <string name="menuDescription">Описание игры</string>
     <string name="menuDescriptionAnswer">Игра угадай число заданое системой в диапазоне от 0 до 9.
@@ -40,5 +41,21 @@
     <string name="attempt1">Не угадал !!! :( \nУ тебя осталась одна попытка.</string>
     <string name="attempt0">"Количество попыток закончилось! \nПравильный ответ "</string>
     <string name="giveUp">"Ты сдался! Слабак! \nПравильный ответ "</string>
+
+    <!-- Settings -->
+    <string name="settings">Settings</string>
+
+    <string name="backgroundFirstActivity">backgroundFirstActivity</string>
+    <string name="backgroundGuessNumberActivity">backgroundGuessNumberActivity</string>
+    <string name="textColorEvenButton">textColorEvenButton</string>
+    <string name="textColorOddButton">textColorOddButton</string>
+    <string name="textColorStartButton">textColorStartButton</string>
+    <string name="textColorGiveUpButton">textColorGiveUpButton</string>
+    <string name="textColorTextView">textColorTextView</string>
+
+    <string name="set">"  Применить  "</string>
+    <string name="screen_guess_number">Фон в игре</string>
+    <string name="screen_first">Фон начального экрана</string>
+    <string name="text_color">Цвет текста</string>
 
 </resources>
